Add universalSlots method & clean code